minikube/multiple-hpa-services/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # Annotations are different for each Ingress Controller
    # Upon redirecting the path is rewritten to root otherwise the 
    # request would be for the "path" indicated.
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
    - host: www.animals.com # Set the hostname
      http:
        paths:
          # For "/dogs" the traffic will be routed to the dogs' service
          - path: /dogs
            pathType: Prefix
            backend:
              service:
                name: dogs-service
                port:
                  number: 80
          # For "/cats" the traffic will be routed to the cats' service
          - path: /cats
            pathType: Prefix
            backend:
              service:
                name: cats-service
                port:
                  number: 80
